# kero

./: .bazelrc  .clang-format  .clangd  .com2.py  .editorconfig  .gitignore  .pre-commit-config.yaml  BUILD  CMakeLists.txt  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  com2.py  jsconfig.json  llvm.BUILD  package-lock.json  package.json  requirements.txt
.husky/: pre-commit  pre-push
cmake/: FindCppTreeSitter.cmake  FindTreeSitter.cmake
crates/kero/: Cargo.toml  parse_tree.txt
crates/kero-cli/: Cargo.toml
crates/kero-cli/src/: main.rs
crates/kero/src/: arithmetic.rs  kero.pest  lib.rs
crates/kero/src/tests/: basics.rs  core.rs  mod.rs
crates/kero_lexer/: Cargo.toml
crates/kero_lexer/src/: circular_buffer.rs  core.rs  lexer.rs  lib.rs  lib_old.rs  line_scanner.rs  lookaround_buf_reader.rs  main.rs  stack_circular_buffer.rs  string_scanner.rs  utf8.rs  utils.rs
crates/kero_lexer/tests/: lexer_tests.rs
crates/kero_parser/: Cargo.toml
crates/kero_parser/src/: lib.rs
crates/kero_trie/: Cargo.toml
crates/kero_trie/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs
dev/: print_examples.py  tokenize_example.py
docs/: design.md  dev.md  grammar.md
scripts/: coco.mjs  dev.js  dev.mjs  dev.py  doctor.py  grammar_core_gen.sh  grammar_parser_gen.sh  install.mjs  install.sh  parser_gen.sh  pre_push.sh  source_gen.py  test.py
scripts/dev/: cli.py  common.py  doctor.py
scripts/impl/: common.py  doctor.py
src/: CMakeLists.txt
src/Compile/Parser/: Core.c  Core.h  Grammar.peg  NodeKindGenerated.c  NodeKindGenerated.h  ParserGenerated.c  ParserGenerated.h  ParserGeneratedCInclude.h
src/Compile/Parser2/: tree_sitter_kero_test.cc
src/Compile/ParserFacade/: ParserFacade.cpp  ParserFacade.h  ParserFacadeTest.cpp
src/Grammar/: Grammar.peg  NodeKindGenerated.h  NodeKindUtilGenerated.cpp  NodeKindUtilGenerated.h  Parser.cpp  Parser.h  ParserAuxil.h  ParserGenerated.c  ParserGenerated.h  ParserGeneratedCInclude.h  ParserTest.cpp
src/compiler/: code_gen_visitors.cc  code_generator.cc  code_generator.h  code_generator_test.cc  core.cc  core.h  ir_generator.cc  ir_generator.h  ir_generator_test.cc  ir_visit_handlers.cc  ir_visitor.cc  ir_visitor.h  node_visitor.h  parser.cc  parser.h  parser_builder.cc  parser_builder.h  parser_builder_test.cc  parser_test.cc  result.h  utils.cc  utils.h
src/cpp_tree_sitter/: api.cc  api.h
src/grammar/: ast.h  bridge.cc  bridge.h  core.c  core.h  grammar.peg  parser.c  parser.cc  parser.h  parser_auxil.cc  parser_auxil.h  parser_facade.cc  parser_facade.h  parser_generated.c  parser_generated.h  parser_generated_c_include.h  parser_generated_include.h  parser_test.cc  peg.h
src/grammar/c/: parser_auxil.h
src/grammar/parser/: core.h  generated-c-inl.h  generated.c  generated.h  generated_c_include.h  grammar.peg  inline.h
src/kero-exe/: main.cpp
src/kero-lib/: CMakeLists.txt  kero.h  lib.cpp
src/peg_parser/: CMakeLists.txt
src/tree-sitter-kero/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
src/tree-sitter-kero/bindings/go/: binding.go  binding_test.go
src/tree-sitter-kero/bindings/node/: binding.cc
src/tree-sitter-kero/bindings/python/tree_sitter_kero/: __init__.py  binding.c
src/tree-sitter-kero/bindings/rust/: build.rs  lib.rs
src/tree-sitter-kero/bindings/swift/TreeSitterKero/: kero.h
src/tree-sitter-kero/src/: grammar.json  node-types.json  parser.c
src/tree-sitter-kero/test/corpus/: binary_expression.txt  call_expression.txt  function_definition.txt  if_statement.txt
src/utils/: llvm_compile_commands_test.cc
toolchain/: BUILD  cc_toolchain_config.bzl
