""""""

module(
    name = "kero",
)

bazel_dep(
    name = "com_google_googletest",
    version = "1.14.0",
    repo_urls = ["https://github.com/google/googletest/archive/refs/tags/v{version}.zip"],
)
# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# http_archive(
#     name = "com_google_googletest",
#     strip_prefix = "googletest-1.14.0",
#     url = "https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip",
# )

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
# bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
# git_override(
#     module_name = "hedron_compile_commands",
#     remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
#     commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
#     # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
#     # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
# )
