"""
kero
"""

module(name = "kero", version = "0.1.0")

bazel_dep(name = "googletest", version = "1.14.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
)

CPP_TREE_SITTER_VERSION = "0.1.2"
bazel_dep(name = "cpp_tree_sitter", version = CPP_TREE_SITTER_VERSION)
archive_override(
    module_name = "cpp_tree_sitter",
    urls = ["https://github.com/oneofthezombies/cpp-tree-sitter/archive/refs/tags/v" + CPP_TREE_SITTER_VERSION + ".zip"],
    strip_prefix = "cpp-tree-sitter-" + CPP_TREE_SITTER_VERSION,
)
